--- a/styling.css
+++ b/styling.css
@@ -1,13 +1,30 @@
-h1 {
+﻿h1 {
     text-align: center;
-    
     margin-top: -8px;
     color: whitesmoke;
     height: 40px;
     text-transform: capitalize;
-    padding: 20px;                
-    font-family:monospace;                
-    
+    padding: 20px;
+    font-family: monospace;
+}
+#myVideo {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+}
+.content {
+    position: fixed;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    color: #f1f1f1;
+    width: 100%;
+    padding: 20px;
 }
 .options {
     text-align: center;
@@ -18,43 +35,45 @@ h1 {
     border-style: solid;
     border-color: silver;
     border-width: 1px;
-    
 }
+
 .option {
     color: whitesmoke;
-    text-decoration: none;    
+    text-decoration: none;
     padding: 20px;
     text-transform: capitalize;
-   
 }
-.option:hover{
-    cursor: pointer;
-    color: rgba(40, 40, 145, 0.644);
-}
+
+    .option:hover {
+        cursor: pointer;
+        color: rgba(40, 40, 145, 0.644);
+    }
+
 .top {
-    text-align: center;      
-    margin: -90px 0px 0px 0px; 
-    color:white; 
-    height: 300px;    
+    text-align: center;
+    margin: -90px 0px 0px 0px;
+    color: whitesmoke;
+    height: 300px;
     font-size: 40px;
 }
-.left { 
+
+.left {
     width: 250px;
     color: white;
     font-weight: bold;
-    
     border-width: 1px;
-    border-style:outset;
-    border-color: silver;                
+    border-style: outset;
+    border-color: silver;
     padding: 9px;
     font-family: 'Times New Roman', Times, serif;
 }
-.left p h4{
-    text-align:left;
-    
-}
+
+    .left p h4 {
+        text-align: left;
+    }
+
 .cntr {
-    text-align:center;
+    text-align: center;
     width: 52%;
     border-color: silver;
     margin: -500px 0px 0px 300px;
@@ -65,24 +84,28 @@ h1 {
     padding: 4%;
     border-style: groove;
     font-style: oblique;
-   
 }
+
 #page {
+    position: fixed
     width: 100%;
     height: 2000px;
-    background-image: url(bkgrnd.jpg);
+    
     background-repeat: repeat;
     background-blend-mode: soft-light;
 }
+
 #chosenoption {
-    background-color:rgb(30, 30, 73);
+    background-color: rgb(30, 30, 73);
 }
+
 #intro {
-    height: 10%;    
+    height: 10%;
     margin: 90px 0px 0px 0px;
     text-align: center;
     padding: 4%;
 }
+
 .projects {
     width: 150px;
     height: 100px;
@@ -93,15 +116,18 @@ h1 {
     background-color: silver;
     margin: 100px 0px 0px 600px;
 }
+
 .project {
-    color:black;
+    color: black;
     text-decoration: none;
 }
-.project:hover {
-    cursor: pointer;
-    text-decoration: underline;
-}
+
+    .project:hover {
+        cursor: pointer;
+        text-decoration: underline;
+    }
+
 #intro {
     font-family: monospace;
-    color: rgb(169, 169, 211);
+    color: white;
 }
