--- a/styling.css
+++ b/styling.css
@@ -1,16 +1,11 @@
-﻿h1 {
+﻿#header {
     text-align: center;
-    margin-top: -8px;
-    color: whitesmoke;
-    height: 40px;
-    text-transform: capitalize;
-    padding: 20px;
-    font-family: monospace;
+    
 }
 #myVideo {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit:fill;
     position: fixed;
     left: 0;
     right: 0;
@@ -19,22 +14,18 @@
     z-index: -1;
 }
 .content {
-    position: fixed;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 2);
     color: #f1f1f1;
-    width: 100%;
-    padding: 20px;
+    width: 100%;    
+    background-color: black;
+    background-blend-mode: overlay;
 }
 .options {
     text-align: center;
-    padding: 5px;
+    padding: 2px;
     height: 30px;
-    margin-top: 100px;
-    padding-top: 20px;
-    border-style: solid;
-    border-color: silver;
-    border-width: 1px;
+    
+    
 }
 
 .option {
@@ -50,6 +41,7 @@
     }
 
 .top {
+    
     text-align: center;
     margin: -90px 0px 0px 0px;
     color: whitesmoke;
@@ -57,12 +49,25 @@
     font-size: 40px;
 }
 
+#topintro {
+   position: fixed;
+   width: 100%;
+    height: 40%;
+    object-fit:fill;
+    background-color: black;
+    background-blend-mode: soft-light;    
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: +1;
+}
 .left {
     width: 250px;
     color: white;
     font-weight: bold;
     border-width: 1px;
-    border-style: outset;
+    border-style:hidden;
     border-color: silver;
     padding: 9px;
     font-family: 'Times New Roman', Times, serif;
@@ -71,28 +76,33 @@
     .left p h4 {
         text-align: left;
     }
-
+.centr{
+    text-decoration: line-through;
+    position:relative;
+    width: 100%;
+    height: 100%;
+    padding-top: 30% ;
+}
 .cntr {
     text-align: center;
-    width: 52%;
+    width: 50%;
+    text-align: justify;
     border-color: silver;
     margin: -500px 0px 0px 300px;
     color: white;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: bold;
+    
+    font-style:normal;
+    font-weight:lighter;
     font-size: 30px;
-    padding: 4%;
-    border-style: groove;
+    padding: 10%;
+    border-style:dotted;
     font-style: oblique;
 }
 
-#page {
-    position: fixed
-    width: 100%;
-    height: 2000px;
-    
-    background-repeat: repeat;
-    background-blend-mode: soft-light;
+#page {    
+    /*width: 100%;
+    height: 2000px;    
+    */
 }
 
 #chosenoption {
@@ -100,10 +110,11 @@
 }
 
 #intro {
+    
     height: 10%;
     margin: 90px 0px 0px 0px;
     text-align: center;
-    padding: 4%;
+    
 }
 
 .projects {
@@ -128,6 +139,6 @@
     }
 
 #intro {
-    font-family: monospace;
-    color: white;
+    font-family:'Comic Sans MS';
+    
 }
