--- a/styling.css
+++ b/styling.css
@@ -5,7 +5,7 @@
 #myVideo {
     width: 100%;
     height: 100%;
-    object-fit:fill;
+    object-fit:cover;
     position: fixed;
     left: 0;
     right: 0;
@@ -22,7 +22,7 @@
 }
 .options {
     text-align: center;
-    padding: 2px;
+    
     height: 30px;
     
     
@@ -52,8 +52,8 @@
 #topintro {
    position: fixed;
    width: 100%;
-    height: 40%;
-    object-fit:fill;
+    height: 25%;
+    object-fit:cover;
     background-color: black;
     background-blend-mode: soft-light;    
     left: 0;
@@ -81,7 +81,7 @@
     position:relative;
     width: 100%;
     height: 100%;
-    padding-top: 30% ;
+    padding-top: 15% ;
 }
 .cntr {
     text-align: center;
@@ -140,5 +140,7 @@
 
 #intro {
     font-family:'Comic Sans MS';
-    
+    text-size-adjust: 20%;
+    font-size: 70%;
+    padding-top: 1px;
 }
